Rework pandas handling

--- a/corona.ipynb
+++ b/corona.ipynb
@@ -22,8 +22,8 @@
    "outputs": [],
    "source": [
     "path = 'COVID-19/csse_covid_19_data/csse_covid_19_time_series/time_series_19-covid-Confirmed.csv'\n",
-    "df = pd.read_csv(path)\n",
-    "df"
+    "df_in = pd.read_csv(path)\n",
+    "df_in"
    ]
   },
   {
@@ -32,42 +32,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries = {}\n",
-    "for row in df.to_numpy():    \n",
+    "# rebin values for each country\n",
+    "countries = set(df_in['Country/Region'])\n",
+    "\n",
+    "xlength = len(countries)\n",
+    "ylength = df_in.shape[1] - 4\n",
+    "\n",
+    "data = np.ones((ylength, xlength), dtype=float)\n",
+    "df = pd.DataFrame(data, index=np.arange(ylength), columns=countries)\n",
+    "\n",
+    "for row in df_in.to_numpy():\n",
     "    country = row[1]\n",
-    "    province = None if isinstance(row[0], float) else row[0]\n",
-    "        \n",
-    "    x = []\n",
-    "    y = []\n",
-    "    for i, cell in enumerate(list(row[4:])):\n",
-    "        if cell > 20:\n",
-    "            x.append(i)\n",
-    "            y.append(cell)\n",
-    "            \n",
-    "    if x:   \n",
-    "        if row[1] not in countries:\n",
-    "            countries[country] = {}\n",
-    "            \n",
-    "        countries[country][province] = {\n",
-    "            'x': np.array(x),\n",
-    "            'y': np.log10(y)\n",
-    "        }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = []\n",
-    "for country, color in zip(\n",
-    "    ['Germany', 'Italy', 'Austria', 'Iran', 'Brazil'],\n",
-    "    list(mcolors.BASE_COLORS.keys())[:5]\n",
-    "):\n",
-    "    countries[country][None]['name'] = country\n",
-    "    countries[country][None]['color'] = color\n",
-    "    data.append(countries[country][None])"
+    "    \n",
+    "    for i, n in enumerate(row[4:]):\n",
+    "        df[country][i] += n"
    ]
   },
   {
@@ -77,30 +55,45 @@
    "outputs": [],
    "source": [
     "a = -5\n",
-    "for country in data:\n",
-    "    model = sm.OLS(country['y'][a:], sm.add_constant(country['x'][a:]))\n",
-    "    results = model.fit()\n",
-    "    country['n'], country['m'] = results.params"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = 14\n",
+    "b = 5\n",
+    "\n",
+    "xmin = 30\n",
+    "xmax = df.shape[0] + b - 1\n",
+    "ymin = 2\n",
+    "ymax = 5\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "\n",
-    "for country in data:\n",
-    "    x_fit = np.arange(country['x'][a], country['x'][-1] + b)\n",
-    "    y_fit = country['m'] * x_fit + country['n']\n",
-    "    \n",
-    "    ax.plot(country['x'], country['y'], country['color'] + 's', label=country['name'])\n",
-    "    ax.plot(x_fit, y_fit, country['color'] + '-')\n",
+    "for country, color in zip(\n",
+    "    [\n",
+    "        'Germany',\n",
+    "        'Italy',\n",
+    "        'Austria',\n",
+    "        'Iran',\n",
+    "        'Singapore',\n",
+    "        'Switzerland', \n",
+    "        'Spain',\n",
+    "        'US',\n",
+    "        'China'\n",
+    "    ],\n",
+    "    list(mcolors.TABLEAU_COLORS.keys())\n",
+    "):    \n",
+    "    x = df[country].index\n",
+    "    y = np.log10(df[country])\n",
     "\n",
+    "    model = sm.OLS(y[a:], sm.add_constant(x[a:]))\n",
+    "    results = model.fit()\n",
+    "    params = results.params\n",
+    "    \n",
+    "    x_fit = np.arange(x[a], x[-1] + b)\n",
+    "    y_fit = params[1] * x_fit + params[0]\n",
+    "\n",
+    "    ax.plot(x, y, label=country, linestyle='--', marker='s', color=color)\n",
+    "    ax.plot(x_fit, y_fit, linestyle='-', color=color)\n",
+    "    \n",
     "ax.grid(True)\n",
+    "ax.set_xlim([xmin,xmax])\n",
+    "ax.set_ylim([ymin,ymax])\n",
     "ax.set_xlabel('days since 2020-01-22')\n",
     "ax.set_ylabel('log10 of cases')\n",
     "ax.legend(loc='upper left')\n",
@@ -109,6 +102,13 @@
     "fig.set_size_inches(10, 10)\n",
     "fig.savefig('{}.png'.format(date.today()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -127,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
