--- a/corona.ipynb
+++ b/corona.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "path = 'COVID-19/csse_covid_19_data/csse_covid_19_time_series/time_series_19-covid-Confirmed.csv'\n",
     "df_in = pd.read_csv(path)\n",
-    "df_in"
+    "# df_in"
    ]
   },
   {
@@ -45,7 +45,9 @@
     "    country = row[1]\n",
     "    \n",
     "    for i, n in enumerate(row[4:]):\n",
-    "        df[country][i] += n"
+    "        df[country][i] += n\n",
+    "\n",
+    "# countries"
    ]
   },
   {
@@ -54,61 +56,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = -5\n",
-    "b = 5\n",
+    "a1 = -6\n",
+    "b1 = -1\n",
+    "a2 = -16\n",
+    "b2 = -1\n",
+    "c  = 10\n",
     "\n",
-    "xmin = 30\n",
-    "xmax = df.shape[0] + b - 1\n",
-    "ymin = 2\n",
-    "ymax = 5\n",
+    "xmin = -30\n",
+    "xmax = c\n",
+    "ymin = 100\n",
+    "ymax = 500000\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "\n",
-    "for country, color in zip(\n",
-    "    [\n",
-    "        'Germany',\n",
-    "        'Italy',\n",
-    "        'Austria',\n",
-    "        'Iran',\n",
-    "        'Singapore',\n",
-    "        'Switzerland', \n",
-    "        'Spain',\n",
-    "        'US',\n",
-    "        'China'\n",
-    "    ],\n",
-    "    list(mcolors.TABLEAU_COLORS.keys())\n",
-    "):    \n",
-    "    x = df[country].index\n",
-    "    y = np.log10(df[country])\n",
+    "for country, color in [\n",
+    "    ('Germany', 'tab:red'),\n",
+    "    ('France', 'tab:green'),\n",
+    "    ('Italy', 'tab:orange'),\n",
+    "    ('Austria', 'tab:brown'),\n",
+    "    ('Switzerland', 'tab:gray'), \n",
+    "    ('Spain', 'tab:pink'),\n",
+    "    ('US', 'tab:blue'),\n",
+    "    ('China', 'tab:olive'),\n",
+    "    ('Korea, South', 'tab:cyan'),         \n",
+    "    ('Singapore', 'tab:purple')\n",
+    "]:    \n",
+    "    x = df[country].index - df[country].index[-1]\n",
+    "    y = df[country]\n",
     "\n",
-    "    model = sm.OLS(y[a:], sm.add_constant(x[a:]))\n",
+    "    model = sm.OLS(np.log10(y[a1:b1]), sm.add_constant(x[a1:b1]))\n",
     "    results = model.fit()\n",
     "    params = results.params\n",
+    "    x_fit1 = np.arange(x[a1], x[-1] + 1 + c)\n",
+    "    y_fit1 = np.power(10, params[1] * x_fit1 + params[0])\n",
     "    \n",
-    "    x_fit = np.arange(x[a], x[-1] + b)\n",
-    "    y_fit = params[1] * x_fit + params[0]\n",
-    "\n",
-    "    ax.plot(x, y, label=country, linestyle='--', marker='s', color=color)\n",
-    "    ax.plot(x_fit, y_fit, linestyle='-', color=color)\n",
+    "    model = sm.OLS(np.log10(y[a2:b2]), sm.add_constant(x[a2:b2]))\n",
+    "    results = model.fit()\n",
+    "    params = results.params\n",
+    "    x_fit2 = np.arange(x[a2], x[-1] + 1 + c)\n",
+    "    y_fit2 = np.power(10, params[1] * x_fit2 + params[0])\n",
     "    \n",
-    "ax.grid(True)\n",
+    "    label = '{} ({})'.format(country, int(df[country][df.shape[0] - 1]))\n",
+    "    \n",
+    "    plt.semilogy(x, y, label=label, linestyle='', marker='s', color=color)\n",
+    "    plt.semilogy(x_fit1, y_fit1, linestyle='-', color=color)\n",
+    "    plt.semilogy(x_fit2, y_fit2, linestyle='--', color=color)\n",
+    "    \n",
+    "ax.grid(True, which=\"major\", color='black')\n",
+    "ax.grid(True, which=\"minor\", linestyle='--')\n",
     "ax.set_xlim([xmin,xmax])\n",
     "ax.set_ylim([ymin,ymax])\n",
-    "ax.set_xlabel('days since 2020-01-22')\n",
-    "ax.set_ylabel('log10 of cases')\n",
+    "ax.set_xlabel('days since {}'.format(date.today()))\n",
+    "ax.set_ylabel('number of reported cases')\n",
+    "ax.set_xticks(np.arange(xmin, xmax), minor=True)\n",
     "ax.legend(loc='upper left')\n",
     "\n",
     "fig = plt.gcf()\n",
-    "fig.set_size_inches(10, 10)\n",
+    "fig.set_size_inches(15, 15)\n",
     "fig.savefig('{}.png'.format(date.today()))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
